# ComfyUI-Audio-Srt-Aligner

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
aligner/: engine.py  stable_ts_engine.py  uvr5_separator.py
docs/: prompts.md
example/: Audio-srt-aligner--srt-overlay.json
nodes/: aligner_node.py  video_srt_overlay_node.py
scripts/: download_fonts.py
utils/: srt_parser.py
